--- a/vue-blog/src/assets/common.css
+++ b/vue-blog/src/assets/common.css
@@ -1,11 +1,399 @@
-.test-bg {
-    background-color: red !important;
+/* Font importing */
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;400;500;600&family=Montserrat:wght@300;400;500;600&display=swap");
+
+/* CSS reset */
+/* Box sizing rules */
+/**,*/
+/**::before,*/
+/**::after {*/
+/*    box-sizing: border-box;*/
+/*}*/
+
+/* Remove default padding */
+ul[class],
+ol[class] {
+  padding: 0;
 }
 
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Set core body defaults */
+/*body {*/
+/*    min-height: 100vh;*/
+/*    max-height: 100vh !important;*/
+/*    overflow-y: hidden;*/
+/*    scroll-behavior: smooth;*/
+/*    text-rendering: optimizeSpeed;*/
+/*    line-height: 1.5;*/
+/*    margin: 0;*/
+/*    -webkit-font-smoothing: antialiased;*/
+/*    -moz-osx-font-smoothing: grayscale;*/
+/*}*/
+
+/* Remove list styles on ul, ol elements with a class attribute */
+ul[class],
+ol[class] {
+  list-style: none;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img {
+  max-width: 100%;
+  display: block;
+}
+
+/* Natural flow and rhythm in articles by default */
+article > * + * {
+  margin-top: 1em;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+/* Remove all animations and transitions for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul[class],
+ol[class],
+li,
+a,
+button,
+button[type="submit"],
+span,
+strong,
+::placeholder {
+  font-family: "Montserrat", sans-serif;
+}
+
+h1.secondary,
+h2.secondary,
+h3.secondary,
+h4.secondary,
+h5.secondary,
+h6.secondary,
+p.secondary,
+ul[class].secondary,
+ol[class].secondary,
+li.secondary,
+a.secondary,
+button.secondary,
+button[type="submit"].secondary,
+span.secondary {
+  font-family: "Barlow Condensed", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #2ad497 !important;
+}
+
+a:hover {
+  text-decoration: underline !important;
+  color: #878787 !important;
+}
+
+.bigger-font {
+  font-size: calc(1em + 7px);
+}
+
+/* Shared styles */
+
+:root {
+  --main-green: #2ad497;
+  --secondary-green: #3da9a1;
+  --main-dark: #282c34;
+  --main-dark-transparent: rgba(40, 44, 52, 0.27);
+  --main-light: #e8dfd1;
+}
+
+/*Scrollbar style */
+body * ::-webkit-scrollbar {
+  width: 5px;
+  height: 10px;
+}
+
+body * ::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+}
+
+body * ::-webkit-scrollbar-thumb {
+  background: var(--main-dark);
+  border: 0 #fff;
+  border-radius: 5px;
+}
+
+body * ::-webkit-scrollbar-thumb:hover {
+  background: var(--main-dark);
+}
+
+body * ::-webkit-scrollbar-thumb:active {
+  background: var(--main-dark);
+}
+
+body * ::-webkit-scrollbar-track {
+  background: transparent;
+  border: 0 #fff;
+  border-radius: 0;
+}
+
+body * ::-webkit-scrollbar-track:active,
+body * ::-webkit-scrollbar-track:hover {
+  background: transparent;
+}
+
+body * ::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+/*end Scrollbar style */
+
+/*text formatting */
+.light,
+.light h3 {
+  font-weight: 300 !important;
+}
+
+.medium,
+.medium h3 {
+  font-weight: 400 !important;
+}
+
+.semi-bold,
+.semi-bold h3 {
+  font-weight: 500 !important;
+}
+
+.bold,
+.bold h3 {
+  font-weight: 600;
+}
+
+.white-text {
+  color: #ffffff !important;
+}
+
+.dark-text {
+  color: var(--main-dark) !important;
+}
+
+.smaller-p {
+  font-size: 0.8rem;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.center-text {
+  text-align: center;
+}
+
+/*end text formatting*/
+
+/*flexbox*/
+.column,
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.column > .item,
+.row > .item {
+  margin: 1rem;
+}
+.column {
+  flex-direction: column;
+}
+.row {
+  flex-direction: row;
+}
+.justify-center {
+  justify-content: center;
+}
+.align-items-center {
+  align-items: center;
+}
+.space-between {
+  justify-content: space-between;
+}
+.flex-start {
+  justify-content: flex-start;
+}
+.flex-end {
+  justify-content: flex-end;
+}
+
+/*end flexbox*/
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.padding-general {
+  padding: 1.5rem;
+}
+
+.paper-radius {
+  border-radius: 0.8rem !important;
+}
+
+.border-separator {
+  padding: 1.5rem;
+  position: relative;
+  z-index: 1;
+  transition: all ease-out 0.2s;
+}
+
+.border-separator:before {
+  content: "";
+  position: absolute;
+  left: 5%;
+  bottom: 0;
+  height: 1px;
+  width: 90%; /* or 100px */
+  border-bottom: 1px solid rgba(2, 2, 2, 0.2);
+}
+
+/*backgrounds*/
+.main-dark-bg {
+  background-color: var(--main-dark) !important;
+}
+
+.main-light-bg {
+  background-color: var(--main-light) !important;
+}
+
+.glassy-light-bg {
+  background: linear-gradient(
+    90deg,
+    rgba(222, 222, 222, 0.5),
+    rgba(243, 243, 243, 0.62)
+  ) !important;
+  /*box-shadow: 0 8px 32px 0 rgba( 141, 128, 128, 0.37 ) !important;*/
+  box-shadow: none !important;
+  backdrop-filter: blur(7px) !important;
+  -webkit-backdrop-filter: blur(7px) !important;
+  border: 1px solid rgba(255, 255, 255, 0.2) !important;
+}
+
+.glassy-dark-bg {
+  background: linear-gradient(
+    240deg,
+    rgba(40, 44, 52, 0.55),
+    rgba(141, 128, 128, 0.45)
+  ) !important;
+  /*box-shadow: 0 8px 32px 0 rgba( 141, 128, 128, 0.37 ) !important;*/
+  /*box-shadow: none !important;*/
+  backdrop-filter: blur(7px) !important;
+  -webkit-backdrop-filter: blur(7px) !important;
+  /*border: 1px solid rgba(255, 255, 255, 0.2) !important;*/
+}
+
+.glassy-light-bg.padding,
+.glassy-dark-bg.padding {
+  padding: 0.8rem;
+}
+
+.green-bg {
+  background-color: var(--main-green) !important;
+}
+
+/*Button shared styles*/
+.white-transparent-btn {
+  background: transparent !important;
+  border: 2px solid white !important;
+}
+
+.main-dark-transparent-btn {
+  color: var(--main-dark) !important;
+  border: 2px solid var(--main-dark) !important;
+  background: transparent !important;
+}
+
+.main-dark-btn {
+  background-color: var(--main-dark) !important;
+  color: var(--main-light) !important;
+  border: 2px solid var(--main-dark) !important;
+}
+
+/*End button shared styles*/
+
+/*Margin style*/
+.bottom-breath-margin {
+  margin-bottom: 1.5rem;
+}
+
+.top-breath-margin {
+  margin-top: 1.5rem !important;
+}
+
+/*Size styles*/
 .full-width {
-    width: 100%;
+  width: 100%;
 }
 
-.full-vw {
-    width: 100vw;
+.full-height {
+  height: 100%;
 }
+
+/*!*footer*!*/
+
+/*footer {*/
+/*    position: fixed !important;*/
+/*    bottom: 1rem !important;*/
+/*    width: 100% !important;*/
+/*}*/
+
+/*.footer {*/
+/*    margin-top: 1rem;*/
+/*    margin-left: auto;*/
+/*    margin-right: auto;*/
+/*    position: static;*/
+/*    width: 15rem;*/
+/*    text-align: center;*/
+/*}*/
